--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jacoco</groupId>
-	<artifactId>org.jacoco.examples.maven.java</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<artifactId>ex_ample</artifactId>
+	<version>1.0</version>
+	<packaging>war</packaging>
 
-	<name>JaCoCo Maven plug-in example for Java project</name>
+	<name>ex_ample</name>
 	<url>http://www.eclemma.org/jacoco</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src/main/java</sourceDirectory>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
